workshop/labs/network-policies-calico/tenant-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-2
  labels:
    environment: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tenant-2
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: server-configuration
          configMap:
            name: nginx-configuration
      containers:
        - name: nginx
          image: nginx:stable-alpine3.17-slim
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: server-configuration
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: server-configuration
              mountPath: /var/www/html/index.html
              subPath: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tenant-2
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
