workshop/labs/network-policies-calico/np-default-deny.yaml
---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: default-deny
  namespace: tenant-2
spec:
  order: 20
  selector: ""
